# the-wrapping-book

./: .gitignore  Makefile  README.md  extract_tutorial_steps.py  generate_book.py  generate_post.py  main.py  pyproject.toml
utils/: BaseContentGenerator.py  BookGenerator.py  HorizontalLine.py  PostGenerator.py  colors.py  colors_utils.py  data_utils.py  db_utils.py  fonts.py  image_utils.py  qr_utils.py  report_utils.py
